--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -70,17 +70,23 @@
 			<scope>provided</scope>
 		</dependency>
 		<!-- 服务注册与发现 -->
-<!--		<dependency>-->
-<!--			<groupId>com.alibaba.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
-<!--			<version>2.2.0.RELEASE</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+			<version>2.2.0.RELEASE</version>
+		</dependency>
 		<!--        配置中心来做配置管理-->
-<!--		<dependency>-->
-<!--			<groupId>com.alibaba.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
-<!--			<version>2.2.0.RELEASE</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+			<version>2.2.0.RELEASE</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>2.2.5.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.validation</groupId>
@@ -93,6 +99,8 @@
 		<!--            <groupId>org.springframework.cloud</groupId>-->
 		<!--            <artifactId>spring-cloud-starter-sleuth</artifactId>-->
 		<!--        </dependency>-->
+
+
 	</dependencies>
 
 	<dependencyManagement>
