--- a/gulimall-member/src/main/resources/application.yml
+++ b/gulimall-member/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 6000
+  port: 7000
 
 # mysql
 spring:
@@ -10,6 +10,11 @@ spring:
     url: jdbc:mysql://localhost:3306/gulimall-ums?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
+  application:
+    name: gulimall-member
+  cloud:
+    nacos:
+      server-addr: localhost:8848
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
