--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>gulimall-common</module>
         <module>gulimall-member</module>
         <module>gulimall-coupon</module>
+        <module>gulimall-gateway</module>
         <module>renren-generator</module>
-        <module>renren-fast</module>
     </modules>
 </project>
